--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submissionwish_list.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/submissionwish_list.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static "pretalx_public_voting/vote.css" %}" />
 
     {% include "agenda/header_row.html" with with_margin=True %}
-    <h2>{% trans "Public voting" %} - Veranstaltungswünsche</h2>
+    <h2>{% trans "Public voting" %} - Themenwünsche</h2>
     {{ request.event.public_vote_settings.text|rich_text }}
     {% if hashed_email %}
         <form method="POST" >{% csrf_token %}
