OERC-44: logo bug fixed

--- a/src/pretalx/cfp/templates/cfp/event/base.html
+++ b/src/pretalx/cfp/templates/cfp/event/base.html
@@ -5,6 +5,4 @@
     {% endblock %}
 {% endblock %}
 
-{% block nav_link %}
-    {{ request.event.urls.base }}
-{% endblock %}
+{% block nav_link %}{{ request.event.urls.base }}{% endblock %}
