OERC-47: making container mostly full width

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -1,3 +1,7 @@
+#main-container {
+    min-width: -webkit-fill-available !important;
+}
+
 #main-container.main-schedule {
   min-width: min-content;
   margin: 0 auto;
