OERC-32 OERC-22 OERC-47: fixing a bug where mutliple events are shown. Resetting changes container width. Adding text for session wishes link

--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html
@@ -17,7 +17,8 @@
   {% blocktrans trimmed %}
   Here you can see all submission wishes and their comments.
   {% endblocktrans %}
-  <a href="{% url "plugins:pretalx_public_voting:signup" event=request.event.slug %}">{% trans "Click here to sign up for voting." %}</a>
+  <a href="{% url "plugins:pretalx_public_voting:signup" event=request.event.slug %}">{% trans "Click here to sign up for voting." %}</a><br>
+  <a href="/">{% trans "Login here to give submission wishes." %}</a>
 </p>
 <div>
   {% for submission in submission_wishes %}
