--- a/src/pretalx/static/agenda/scss/_speaker.scss
+++ b/src/pretalx/static/agenda/scss/_speaker.scss
@@ -42,7 +42,7 @@
       margin-top: 1rem;
       margin-bottom: 1rem;
       border: 0;
-      font-weight: bold;
+      #font-weight: bold;
     }
     .talk-image {
       float: right;
