--- a/src/pretalx/cfp/templates/cfp/event/user_submissions.html
+++ b/src/pretalx/cfp/templates/cfp/event/user_submissions.html
@@ -99,7 +99,7 @@
                             <td class="flip text-right d-none d-sm-table-cell">
                                 {% if submission.review_code %}
                                     <button data-destination="{{ submission.urls.review.full }}"
-                                            class="btn btn-sm btn-info"
+                                            class="btn btn-sm btn-info m-1"
                                             data-toggle="tooltip"
                                             data-placement="left"
                                             title="{% translate 'Copy code for review' %}"
@@ -107,7 +107,7 @@
                                         <i class="fa fa-link"></i>
                                     </button>
                                 {% endif %}
-                                <a href="{{ submission.urls.user_base }}" class="btn btn-sm btn-info">
+                                <a href="{{ submission.urls.user_base }}" class="btn btn-sm btn-info m-1">
                                     {% if submission.editable %}
                                         <i class="fa fa-edit" title="{% translate "Edit proposal" %}"></i>
                                     {% else %}
@@ -116,13 +116,13 @@
                                 </a>
                                 {% if submission.state == 'accepted' %}
                                     <a href="{{ submission.urls.confirm }}"
-                                       class="btn btn-sm btn-success">
+                                       class="btn btn-sm btn-success m-1">
                                         <i class="fa fa-check"></i> {% translate "Confirm" %}
                                     </a>
                                 {% endif %}
                                 {% if request.event.feature_flags.use_feedback and submission.does_accept_feedback %}
                                     <a href="{{ submission.urls.feedback }}"
-                                       class="btn btn-sm btn-info">
+                                       class="btn btn-sm btn-info m-1">
                                         <i class="fa fa-comments"></i> {% translate "Feedback" %}{% if submission.feedback.count %}  ({{ submission.feedback.count }}){% endif %}
                                     </a>
                                 {% endif %}
