OERC-51: updating sponsors to kooperation url of sponsors page

--- a/src/pretalx/plugins/pretalx-pages/pretalx_pages/templates/pretalx_pages/form.html
+++ b/src/pretalx/plugins/pretalx-pages/pretalx_pages/templates/pretalx_pages/form.html
@@ -22,7 +22,7 @@
                     {% bootstrap_field form.link_in_footer layout="event" %}
                 </fieldset>
                 <p>
-                  Bitte geben Sie im Feld <strong>"URL to static page"</strong> den Text <strong>"sponsors"</strong> ein,
+                  Bitte geben Sie im Feld <strong>"URL to static page"</strong> den Text <strong>"kooperation"</strong> ein,
                   wenn die Seite als Sponsorenseite erkannt und angezeigt werden soll.
                 </p>
                 <fieldset id="content">
