OERC-51: changed events api call from attendee_email to order email. Adjusting some urls and frontend components

--- a/src/pretalx/agenda/templates/agenda/base.html
+++ b/src/pretalx/agenda/templates/agenda/base.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block nav_link %}
-    {% has_perm 'agenda.view_schedule' request.user request.event as can_view_schedule %}{% if can_view_schedule %}{{ request.event.urls.schedule }}{% else %}{{ request.event.urls.base }}{% endif %}
+    {% has_perm 'agenda.view_schedule' request.user request.event as can_view_schedule %}{% if can_view_schedule %}{{ request.event.urls.events }}{% else %}{{ request.event.urls.events }}{% endif %}
 {% endblock %}
 
 {% block content %}
