--- a/src/pretalx/cfp/templates/cfp/index.html
+++ b/src/pretalx/cfp/templates/cfp/index.html
@@ -65,7 +65,7 @@
                         title="{% translate 'Purchase ticket' %}"
                       >
                         <i class="fa fa-ticket"></i>
-                        {% translate 'Ticket' %}
+                        {% translate 'Purchase ticket' %}
                       </a>
                     {% endif %}
                   </div>
@@ -105,7 +105,7 @@
                   title="{% translate 'Purchase ticket' %}"
                 >
                   <i class="fa fa-ticket"></i>
-                  {% translate 'Ticket' %}
+                  {% translate 'Purchase ticket' %}
                 </a>
                 {% endif %}
               </div>
@@ -145,7 +145,7 @@
                   title="{% translate 'Purchase ticket' %}"
                 >
                   <i class="fa fa-ticket"></i>
-                  {% translate 'Ticket' %}
+                  {% translate 'Purchase ticket' %}
                 </a>
                 {% endif %}
               </div>
