--- a/src/pretalx/agenda/templates/agenda/talk.html
+++ b/src/pretalx/agenda/templates/agenda/talk.html
@@ -140,6 +140,9 @@
             <section>
                 {% html_signal "pretalx.agenda.signals.html_below_session_pages" sender=request.event request=request submission=submission %}
             </section>
+            <div class="etherpad-container embed-responsive embed-responsive-16by9 card">
+              <iframe src="https://venueless.oercamp.de/login/8jyrGRPl8Ov46Uu5nsnZJnN3" allowfullscreen></iframe>
+            </div>
         </div>
     </div>
     {% if not hide_speaker_links %}
