OERC-21: adding live chat beta remark

--- a/src/pretalx/agenda/templates/agenda/header_row.html
+++ b/src/pretalx/agenda/templates/agenda/header_row.html
@@ -31,7 +31,7 @@
         </a>
         {% if request.event.is_venueless_world_enabled %}
         <a href="{{ request.event.urls.venueless_embedded }}" class="btn btn-outline-success {% if "/venueless/" in request.path %} active{% endif %}">
-          <i class="fa fa-comments-o"></i> Live Chat
+          <i class="fa fa-comments-o"></i> Live Chat (Beta)
         </a>
         {% endif %}
     </div>
