OERC-51: Implementing login Mask vefore submit form, if user is not authenticated

--- a/src/pretalx/cfp/templates/cfp/event/index.html
+++ b/src/pretalx/cfp/templates/cfp/event/index.html
@@ -35,7 +35,7 @@
             {% endif %}
             {% if not is_html_export %}
                 <a class="btn btn-success btn-lg btn-block {% if not cfp.is_open and not access_code.is_valid %}disabled{% endif %}"
-                   href="{{ request.event.urls.submit }}{{ submit_qs }}"
+                   href="{{ submit_url }}{{ submit_qs }}"
                 >
                     {% if cfp.is_open or access_code.is_valid %}
                         {% translate "Submit a proposal" %}
