OERC-51: removing seconds from timepicker. First fix for miss-scrolling when changing day on schedule gridview

--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submissionwish_list.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="{% static "pretalx_public_voting/vote.css" %}" />
 
 {% include "agenda/header_row.html" with with_margin=True %}
-<h2>{% trans "Public voting" %} - Themenwünsche</h2>
+<h2>{% trans "Public voting" %} – Themenwünsche</h2>
 {{ request.event.public_vote_settings.text_wishes|rich_text }}
 
 <p>
