--- a/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submission_list.html
+++ b/src/pretalx/plugins/pretalx-public-voting/pretalx_public_voting/templates/pretalx_public_voting/public_submission_list.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static "pretalx_public_voting/vote.css" %}" />
 
     {% include "agenda/header_row.html" with with_margin=True %}
-    <h2>{% trans "Public voting" %} - Einreichungen</h2>
+    <h2>{% trans "Public voting" %} – Einreichungen</h2>
     {{ request.event.public_vote_settings.text|rich_text }}
 
     <p>
