--- a/src/pretalx/static/common/scss/_pretalx.scss
+++ b/src/pretalx/static/common/scss/_pretalx.scss
@@ -183,3 +183,8 @@ pre {
 .venueless-embedded-container {
     min-height: 50vh;
 }
+
+.temporarily-hidden {
+    visibility: hidden;
+    height: 0;
+}
