--- a/src/pretalx/cfp/templates/cfp/event/submission_profile.html
+++ b/src/pretalx/cfp/templates/cfp/event/submission_profile.html
@@ -28,8 +28,10 @@
             <script defer src="{% static "vendored/moment-with-locales.js" %}"></script>
             <script defer src="{% static "vendored/moment-timezone-with-data-10-year-range.js" %}"></script>
         {% endcompress %}
+        <div class="temporarily-hidden">
         {% include "common/availabilities.html" %}
         {% bootstrap_field form.availabilities layout='event' %}
+        </div>
     {% endif %}
 
     {% compress js %}
