--- a/src/pretalx/orga/templates/orga/user.html
+++ b/src/pretalx/orga/templates/orga/user.html
@@ -22,5 +22,7 @@
             {% include "orga/includes/submit_row.html" with submit_name="form" submit_value="login" %}
         </fieldset>
     </form>
+    {% if user_is_administrator %}
     {% include "common/user_api_token.html" with orga="true" %}
+    {% endif %}
 {% endblock %}
